[gd_scene load_steps=34 format=2]

[ext_resource path="res://Bubble.gd" type="Script" id=1]
[ext_resource path="res://images/pop11.png" type="Texture" id=2]
[ext_resource path="res://images/pop14.png" type="Texture" id=3]
[ext_resource path="res://images/pop13.png" type="Texture" id=4]
[ext_resource path="res://images/pop15.png" type="Texture" id=5]
[ext_resource path="res://images/pop16.png" type="Texture" id=6]
[ext_resource path="res://images/pop10.png" type="Texture" id=7]
[ext_resource path="res://images/pop12.png" type="Texture" id=8]
[ext_resource path="res://images/orb5.png" type="Texture" id=9]
[ext_resource path="res://images/orb3.png" type="Texture" id=10]
[ext_resource path="res://images/orb6.png" type="Texture" id=11]
[ext_resource path="res://images/orb0.png" type="Texture" id=12]
[ext_resource path="res://images/orb1.png" type="Texture" id=13]
[ext_resource path="res://images/orb4.png" type="Texture" id=14]
[ext_resource path="res://images/orb2.png" type="Texture" id=15]
[ext_resource path="res://images/trap03.png" type="Texture" id=16]
[ext_resource path="res://images/trap04.png" type="Texture" id=17]
[ext_resource path="res://images/trap07.png" type="Texture" id=18]
[ext_resource path="res://images/trap01.png" type="Texture" id=19]
[ext_resource path="res://images/trap05.png" type="Texture" id=20]
[ext_resource path="res://images/trap00.png" type="Texture" id=21]
[ext_resource path="res://images/trap02.png" type="Texture" id=22]
[ext_resource path="res://images/trap06.png" type="Texture" id=23]
[ext_resource path="res://images/trap11.png" type="Texture" id=24]
[ext_resource path="res://images/trap16.png" type="Texture" id=25]
[ext_resource path="res://images/trap12.png" type="Texture" id=26]
[ext_resource path="res://images/trap13.png" type="Texture" id=27]
[ext_resource path="res://images/trap14.png" type="Texture" id=28]
[ext_resource path="res://images/trap17.png" type="Texture" id=29]
[ext_resource path="res://images/trap10.png" type="Texture" id=30]
[ext_resource path="res://images/trap15.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": false,
"name": "blow",
"speed": 15.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 18 ) ],
"loop": true,
"name": "trap1",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 25 ), ExtResource( 29 ) ],
"loop": true,
"name": "trap2",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "pop",
"speed": 30.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "float",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="Bubble" type="KinematicBody2D"]
z_index = -1
collision_layer = 8
collision_mask = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "blow"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Trigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
shape = SubResource( 2 )
[connection signal="area_entered" from="Trigger" to="." method="_on_Trigger_area_entered"]
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="body_exited" from="Trigger" to="." method="_on_Trigger_body_exited"]
